connected backend to frontend

--- a/configuration.json
+++ b/configuration.json
@@ -1,1 +1,1 @@
-{"totalTickets":2,"ticketReleaseRate":2,"customerRetrievalRate":12,"maxTicketCapacity":2}
+{"totalTickets":23,"ticketReleaseRate":2,"customerRetrievalRate":2,"maxTicketCapacity":2,"numOfCustomers":2,"numOfVendors":3}
